*SVN*

* Allow any Enumerable, not just Array, to work as bind variables #1344 [Jeremy Kemper]

* Added actual database-changing behavior to collection assigment for has_many and has_and_belongs_to_many #1425 [Sebastian Kanthak].
  Example:

    david.projects = [Project.find(1), Project.new("name" => "ActionWebSearch")]
    david.save
  
  If david.projects already contain the project with ID 1, this is left unchanged. Any other projects are dropped. And the new
  project is saved when david.save is called.
  
  Also included is a way to do assignments through IDs, which is perfect for checkbox updating, so you get to do:
  
    david.project_ids = [1, 5, 7]

* Corrected typo in find SQL for has_and_belongs_to_many.  #1312 [ben@bensinclair.com]

* Added ActiveRecord::Recursion for guarding against recursive saves

* Fixed sanitized conditions for has_many finder method.  #1281 [jackc@hylesanderson.com, pragdave, Tobias Luetke]

* Comprehensive PostgreSQL schema support.  Use the optional schema_search_path directive in database.yml to give a comma-separated list of schemas to search for your tables.  This allows you, for example, to have tables in a shared schema without having to use a custom table name.  See http://www.postgresql.org/docs/8.0/interactive/ddl-schemas.html to learn more.  #827 [dave@cherryville.org]

* Corrected @@configurations typo #1410 [david@ruppconsulting.com]

* Return PostgreSQL columns in the order they were declared #1374 [perlguy@gmail.com]

* Allow before/after update hooks to work on models using optimistic locking 

* Eager loading of dependent has_one associations won't delete the association #1212

* Added a second parameter to the build and create method for has_one that controls whether the existing association should be replaced (which means nullifying its foreign key as well). By default this is true, but false can be passed to prevent it.

* Using transactional fixtures now causes the data to be loaded only once.
